# exchange.airdrop.analyzer

./: .gitignore  README.md
.github/workflows/: build_desktop.yml
apps/desktop/: Makefile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/scripts/: build_tauri_linux.sh  build_tauri_macos.sh  build_tauri_windows.ps1
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: CustomSelect.tsx  ImportCsvSection.tsx  InputsSection.tsx  LanguageSelector.tsx  SellPlansSection.tsx  SummarySection.tsx
apps/desktop/src/core/: calculations.ts  engine.ts  farm-diagnosis.ts  index.ts  models.ts  sell-plans.ts
apps/desktop/src/core/__tests__/: backpack-parser.test.ts  calculations.test.ts  pacifica-parser.test.ts
apps/desktop/src/core/__tests__/fixtures/: backpack_mixed_locale.csv
apps/desktop/src/core/exchanges/: backpack.ts  number.ts  pacifica.ts  registry.ts  types.ts
apps/desktop/src/i18n/: index.ts  translations.ts
apps/desktop/src/styles/: app.css
apps/desktop/src/utils/: format.ts  pdf-report.ts
