[package]
name = "exchange-airdrop-analyzer"
version = "0.1.0"
description = "Exchange Airdrop Analyzer desktop app"
authors = ["Exchange Airdrop Analyzer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
